cloud/w8/day-b/manifests/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: day-b
  labels:
    purpose: learning
    track: cloud-devops
