cloud/w8/day-b/manifests/04-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-web
  namespace: day-b
spec:
  type: NodePort
  selector:
    app: demo-web
  ports:
    - name: http
      port: 80
      targetPort: 80
